fix useless scrollbar in genre list

--- a/Front/react-streaming-client/src/style/movies-list.css
+++ b/Front/react-streaming-client/src/style/movies-list.css
@@ -32,6 +32,7 @@
 
 .movies-list-by-genre-container{
     height: 100%;
+    overflow-y: hidden;
 }
 
 .movies-list-by-genre-header{
